    ** the MOP generic function GENERIC-FUNCTION-DECLARATIONS is now
       implemented;
    ** the Readers for Class Metaobjects methods CLASS-DIRECT-SLOTS
       and CLASS-DIRECT-DEFAULT-INITARGS have been implemented for
       FORWARD-REFERENCED-CLASSes; error reporting on
       CLASS-DEFAULT-INITARGS, CLASS-PRECEDENCE-LIST and CLASS-SLOTS
       has been improved;
  * fixed some bugs, shown by Paul Dietz' test suite:
    ** DOLIST puts its body in TAGBODY
    ** SET-EXCLUSIVE-OR sends arguments to :TEST function in the
       correct order
    ** MULTIPLE-VALUE-SETQ evaluates side-effectful places before
       value producing form
    ** if more variables are given to PROGV than values, extra
       variables are bound and made to have no value
    ** NSUBSTITUTE on list arguments gets the right answer with
       :FROM-END
    ** ELT signals an error of type TYPE-ERROR when the index argument
       is not a valid sequence index;
    ** LOOP signals (at macroexpansion time) an error of type
       PROGRAM-ERROR when duplicate variable names are found;
  * fixed bug 166: compiler preserves "there is a way to go"
    invariant when deleting code.
  * fixed bug 172: macro lambda lists with required arguments after
    &REST arguments now cause an error to be signalled.  (thanks to
    Matthew Danish)

planned incompatible changes in 0.7.x:
* When the profiling interface settles down, maybe in 0.7.x, maybe
  later, it might impact TRACE. They both encapsulate functions, and
  it's not clear yet how e.g. UNPROFILE will interact with TRACE
  and UNTRACE. (This shouldn't matter, though, unless you are
  using profiling. If you never profile anything, TRACE should
  continue to behave as before.)
* Inlining can now be controlled the ANSI way, without
  MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))